proxy/local-envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          upgrade_configs:
            - upgrade_type: websocket
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format: 
                # https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/access_loggers/stream/v3/stream.proto#extensions-access-loggers-stream-v3-stdoutaccesslog
                text_format: "[%START_TIME%] m=%REQ(:METHOD)% og_p=%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% p=%REQ(:PATH)% hv=%PROTOCOL%
                s=%RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION%
                %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\"
                \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/api/"
                route:
                  cluster: be-service
                  prefix_rewrite: "/"
              - match:
                  prefix: "/"
                route:
                  cluster: fe-service
                  prefix_rewrite: "/"
  clusters:
  - name: be-service
    type: STATIC
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: be-service
      endpoints:
        - lb_endpoints:
          - endpoint: 
              address:
                socket_address:
                  address: 0.0.0.0
                  port_value: 8000
  - name: fe-service
    type: STATIC
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: fe-service
      endpoints:
        - lb_endpoints:
          - endpoint: 
              address:
                socket_address:
                  address: 0.0.0.0
                  port_value: 3000
